--- a/web/package.json
+++ b/web/package.json
@@ -17,47 +17,47 @@
   },
   "version": "1.0.0",
   "scripts": {
-    "dev": "snowpack dev",
-    "build": "snowpack build",
-    "start": "servor build index.html 8080",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "start": "vite preview",
     "format": "prettier --config ./.prettierrc.yml --write \"./src/**/*.ts?(x)\"",
     "lint": "eslint -c ./.eslintrc.yml \"./src/**/*.ts?(x)\" --fix"
   },
   "devDependencies": {
-    "@snowpack/plugin-react-refresh": "^2.5.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-map-gl": "^6.1.1",
-    "@types/snowpack-env": "^2.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.8.0",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@types/react-map-gl": "^6.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-airbnb-typescript": "^16.2.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1",
-    "servor": "^4.0.2",
-    "snowpack": "3.8.8",
-    "typescript": "^4.5.5"
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "prettier": "^2.6.1",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.1"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.3",
+    "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^6",
-    "ky": "^0.28.7",
-    "mapbox-gl": "^2.7.0",
+    "ky": "^0.30.0",
+    "mapbox-gl": "^2.7.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
-    "react-map-gl": "^7.0.6",
-    "recoil": "^0.6.1"
-  }
+    "react-map-gl": "^7.0.10",
+    "recoil": "^0.7.0"
+  },
+  "resolutions": {
+    "csstype": "3.0.10"
+  }  
 }
