--- a/web/package.json
+++ b/web/package.json
@@ -41,7 +41,8 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "prettier": "^2.6.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.1"
+    "vite": "^2.9.1",
+    "vite-plugin-checker": "^0.4.4"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.7",
@@ -59,5 +60,5 @@
   },
   "resolutions": {
     "csstype": "3.0.10"
-  }  
+  }
 }
