Removed unused files in source distribution

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,14 @@ include = ["utils/"]
 exclude = [
     "data/",
     "docs/",
+    "functions/",
+    "gcloud/",
     "models/",
     "notebooks/",
     "references/",
     "reports/",
+    "web",
+    ".*",
     "*.yml",
     "Makefile",
     "test_environment.py",
