--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 click
 coverage
-docutils
-flake8
+flakeheaven
 folium
 furo
 geopandas
 geopy
 holidays
 jupyter
+mccabe
 numpy
 pandas
+pylint
 scikit-learn
 scipy
 seaborn
