--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,25 @@ repository = "https://github.com/mmykhaylov/uber-fares"
 [tool.yapf]
 based_on_style = "google"
 column_limit = 119
+
+[tool.flakeheaven]
+# make output nice
+format = "grouped"
+# 80 chars aren't enough in 21 century
+max_line_length = 119
+# show line of source code in output
+# show_source = true
+# limit complexity to 10
+max_complexity = 10
+
+[tool.flakeheaven.plugins]
+mccabe = ["+*"]
+pycodestyle = ["+*"]
+pyflakes = ["+*"]
+pylint = [
+    "+*",
+    "-C0103",
+    "-C0301",
+    "-W1203",
+    "-C0114",
+]
