--- a/environment.explicit.yml
+++ b/environment.explicit.yml
@@ -5,6 +5,7 @@ channels:
   - defaults
 dependencies:
   - alabaster=0.7.12=py_0
+  - anyio=3.5.0=py39hecd8cb5_0
   - appnope=0.1.3=pyhd8ed1ab_0
   - argon2-cffi=21.3.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py39h63b48b0_2
@@ -18,6 +19,7 @@ dependencies:
   - beautifulsoup4=4.11.1=pyha770c72_0
   - bleach=5.0.1=pyhd8ed1ab_0
   - blosc=1.21.1=h97e831e_3
+  - bokeh=2.4.2=py39hecd8cb5_1
   - boost-cpp=1.74.0=h8b082ac_8
   - branca=0.5.0=pyhd8ed1ab_0
   - brotli=1.0.9=h5eb16cf_7
@@ -34,16 +36,24 @@ dependencies:
   - click=8.1.3=py39h6e9494a_0
   - click-plugins=1.1.1=py_0
   - cligj=0.7.2=pyhd8ed1ab_1
+  - cloudpickle=2.0.0=pyhd3eb1b0_0
   - colorama=0.4.5=pyhd8ed1ab_0
+  - colorcet=3.0.0=pyhd8ed1ab_0
   - convertdate=2.4.0=pyhd8ed1ab_0
   - coverage=6.4.1=py39h701faf5_0
   - cryptography=37.0.2=py39h9c2a9ce_0
   - curl=7.83.1=h372c54d_0
   - cycler=0.11.0=pyhd8ed1ab_0
+  - cytoolz=0.11.0=py39h9ed2024_0
+  - dask=2022.5.0=py39hecd8cb5_0
+  - dask-core=2022.5.0=py39hecd8cb5_0
+  - datashader=0.14.1=pyh6c4a22f_1
+  - datashape=0.5.4=py39hecd8cb5_1
   - debugpy=1.6.0=py39hfd1d529_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - dill=0.3.5.1=pyhd8ed1ab_0
+  - distributed=2022.5.0=py39hecd8cb5_0
   - docutils=0.17.1=py39h6e9494a_2
   - dom_toml=0.5.1.post1=py_0
   - domdf_python_tools=2.9.1=py_0
@@ -65,6 +75,7 @@ dependencies:
   - fonttools=4.33.3=py39h701faf5_0
   - freetype=2.10.4=h4cff582_1
   - freexl=1.0.6=h0d85af4_0
+  - fsspec=2022.3.0=py39hecd8cb5_0
   - furo=2022.6.21=pyhd8ed1ab_0
   - gdal=3.5.0=py39h97b4846_5
   - geographiclib=1.52=pyhd8ed1ab_0
@@ -81,6 +92,7 @@ dependencies:
   - gstreamer=1.20.3=hdc08c3f_0
   - hdf4=4.2.15=hefd3b78_3
   - hdf5=1.12.1=nompi_ha60fbc9_104
+  - heapdict=1.0.1=pyhd3eb1b0_0
   - hijri-converter=2.2.4=pyhd8ed1ab_0
   - holidays=0.13=pyhd8ed1ab_0
   - icu=70.1=h96cf925_0
@@ -98,12 +110,16 @@ dependencies:
   - joblib=1.1.0=pyhd8ed1ab_0
   - jpeg=9e=hac89ed1_2
   - json-c=0.16=h01d06f9_0
+  - json5=0.9.6=pyhd3eb1b0_0
   - jsonschema=4.6.1=pyhd8ed1ab_0
   - jupyter=1.0.0=py39h6e9494a_7
   - jupyter_client=7.3.4=pyhd8ed1ab_0
   - jupyter_console=6.4.4=pyhd8ed1ab_0
   - jupyter_core=4.10.0=py39h6e9494a_0
+  - jupyter_server=1.17.1=py39hecd8cb5_0
+  - jupyterlab=3.3.2=pyhd3eb1b0_0
   - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_server=2.12.0=py39hecd8cb5_0
   - jupyterlab_widgets=1.1.1=pyhd8ed1ab_0
   - kealib=1.4.15=h4dab1bc_0
   - kiwisolver=1.4.3=py39h7c694c3_0
@@ -133,6 +149,7 @@ dependencies:
   - libiconv=1.16=haf1e3a3_0
   - libkml=1.3.0=h8fd9edb_1014
   - liblapack=3.9.0=15_osx64_openblas
+  - libllvm10=10.0.1=h76017ad_5
   - libllvm14=14.0.6=h41df66c_0
   - libnetcdf=4.8.1=nompi_h6609ca0_102
   - libnghttp2=1.47.0=h942079c_0
@@ -156,6 +173,9 @@ dependencies:
   - libzlib=1.2.12=hfe4f2af_1
   - livereload=2.6.3=pyh9f0ad1d_0
   - llvm-openmp=14.0.4=ha654fa7_0
+  - llvmlite=0.36.0=py39he4411ff_4
+  - locket=1.0.0=py39hecd8cb5_0
+  - lz4=3.1.3=py39h9ed2024_0
   - lz4-c=1.9.3=he49afe7_1
   - mapclassify=2.4.3=pyhd8ed1ab_0
   - markdown-it-py=2.1.0=pyhd8ed1ab_0
@@ -166,12 +186,15 @@ dependencies:
   - mdit-py-plugins=0.3.0=pyhd8ed1ab_0
   - mdurl=0.1.0=pyhd8ed1ab_0
   - mistune=0.8.4=py39h89e85a6_1005
+  - msgpack-python=1.0.3=py39haf03e11_0
+  - multipledispatch=0.6.0=py39hecd8cb5_0
   - munch=2.5.0=py_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mysql-common=8.0.29=h924029e_1
   - mysql-libs=8.0.29=h3cab752_1
   - myst-parser=0.18.0=pyhd8ed1ab_0
   - natsort=8.1.0=pyhd8ed1ab_0
+  - nbclassic=0.3.5=pyhd3eb1b0_0
   - nbclient=0.6.6=pyhd8ed1ab_0
   - nbconvert=6.5.0=pyhd8ed1ab_0
   - nbconvert-core=6.5.0=pyhd8ed1ab_0
@@ -183,6 +206,7 @@ dependencies:
   - notebook=6.4.12=pyha770c72_0
   - nspr=4.32=hcd9eead_1
   - nss=3.78=ha8197d3_0
+  - numba=0.53.1=py39hb2f4e1b_0
   - numpy=1.23.0=py39hda39a74_0
   - openjpeg=2.4.0=h6e7aa92_1
   - openssl=1.1.1p=hfe4f2af_0
@@ -190,7 +214,9 @@ dependencies:
   - pandas=1.4.3=py39hf72b562_0
   - pandoc=2.18=h694c41f_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - param=1.12.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd8ed1ab_0
+  - partd=1.2.0=pyhd3eb1b0_1
   - patsy=0.5.2=pyhd8ed1ab_0
   - pcre=8.45=he49afe7_0
   - pexpect=4.8.0=pyh9f0ad1d_2
@@ -213,6 +239,7 @@ dependencies:
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pycodestyle=2.8.0=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
+  - pyct=0.4.6=py39hecd8cb5_0
   - pydash=5.1.0=pyh6c4a22f_0
   - pyflakes=2.4.0=pyhd8ed1ab_0
   - pygments=2.12.0=pyhd8ed1ab_0
@@ -249,7 +276,9 @@ dependencies:
   - sip=6.5.1=py39h9fcab8e_2
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.9=h6e38e02_1
+  - sniffio=1.2.0=py39hecd8cb5_1
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
+  - sortedcontainers=2.4.0=pyhd3eb1b0_0
   - soupsieve=2.3.1=pyhd8ed1ab_0
   - sphinx=4.3.2=pyh6c4a22f_0
   - sphinx-autobuild=2021.3.14=pyhd8ed1ab_0
@@ -266,6 +295,8 @@ dependencies:
   - sqlite=3.39.0=hd9f0692_0
   - stack_data=0.3.0=pyhd8ed1ab_0
   - statsmodels=0.13.2=py39h15b18c7_0
+  - tbb=2020.3=h879752b_0
+  - tblib=1.7.0=pyhd3eb1b0_0
   - terminado=0.15.0=py39h6e9494a_0
   - threadpoolctl=3.1.0=pyh8a188c0_0
   - tiledb=2.9.5=hb1ce2c0_0
@@ -274,6 +305,7 @@ dependencies:
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
   - tomlkit=0.11.0=pyha770c72_0
+  - toolz=0.11.2=pyhd3eb1b0_0
   - tornado=6.2=py39h701faf5_0
   - traitlets=5.3.0=pyhd8ed1ab_0
   - typing=3.10.0.0=pyhd8ed1ab_0
@@ -285,9 +317,11 @@ dependencies:
   - urllib3=1.26.9=pyhd8ed1ab_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
+  - websocket-client=0.58.0=py39hecd8cb5_4
   - wheel=0.37.1=pyhd8ed1ab_0
   - widgetsnbextension=3.6.1=pyha770c72_0
   - wrapt=1.14.1=py39h701faf5_0
+  - xarray=0.20.1=pyhd3eb1b0_1
   - xerces-c=3.2.3=hf5b2a72_5
   - xorg-libxau=1.0.9=h35c211d_0
   - xorg-libxdmcp=1.1.3=h35c211d_0
@@ -296,6 +330,8 @@ dependencies:
   - yaml=0.2.5=h0d85af4_2
   - yapf=0.32.0=pyhd8ed1ab_0
   - zeromq=4.3.4=he49afe7_1
+  - zict=2.1.0=py39hecd8cb5_0
   - zipp=3.8.0=pyhd8ed1ab_0
   - zlib=1.2.12=hfe4f2af_1
   - zstd=1.5.2=ha9df2e0_2
+prefix: /Users/mike/.conda/anaconda3/envs/uber-fares
